fix tests and more docs

--- a/src/components/Heading/__stories__/Heading.stories.mdx
+++ b/src/components/Heading/__stories__/Heading.stories.mdx
@@ -183,7 +183,7 @@ When the text is longer than its container and the ellipsis flag is on, the end 
       direction={Flex.directions.COLUMN}
       gap={Flex.gaps.MEDIUM}
       align={Flex.align.STRETCH}
-      style={{ width: "50%" }}
+      style={{ width: "480px" }}
     >
       <Heading type={Heading.types.H2} ellipsis={false}>
         Heading without overflow
