--- a/src/components/ExpandCollapse/__stories__/ExpandCollapse.stories.mdx
+++ b/src/components/ExpandCollapse/__stories__/ExpandCollapse.stories.mdx
@@ -1,17 +1,23 @@
 import ExpandCollapse from "../ExpandCollapse";
 import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
+import { createComponentTemplate, Link } from "vibe-storybook-components";
 import { createStoryMetaSettingsDecorator, RelatedComponentsDecorator } from "../../../storybook";
-import { ExpandCollapseCustomHeadingComponent, expandCollapseTemplate } from "./expandCollapse.stories";
-import { Link } from "vibe-storybook-components";
 import {
   ACCORDION,
   DROPDOWN,
   WIZARD
 } from "../../../storybook/components/related-components/component-description-map";
+import { Button, Icon, Text, Flex } from "../../index";
+import { Heading } from "../../../next/next";
+import { Robot } from "../../Icon/Icons";
+import { useState } from "react";
+import "./ExpandCollapse.stories.scss";
 
 export const metaSettings = createStoryMetaSettingsDecorator({
   component: ExpandCollapse,
-  actionPropsArray: ["onClick"]
+  enumPropNamesArray: [], // List enum props here
+  iconPropNamesArray: [], // List props that are typed as icons here
+  actionPropsArray: [] // List the component's actions here
 });
 
 <Meta
@@ -20,6 +26,8 @@ export const metaSettings = createStoryMetaSettingsDecorator({
   argTypes={metaSettings.argTypes}
   decorators={metaSettings.decorators}
 />
+
+export const expandCollapseTemplate = createComponentTemplate(ExpandCollapse);
 
 # ExpandCollapse
 
@@ -34,7 +42,17 @@ export const metaSettings = createStoryMetaSettingsDecorator({
 ExpandCollapse is a component that allows you to hide and show content.
 
 <Canvas>
-  <Story name="Overview" args={{ title: "Expand collapse" }}>
+  <Story
+    name="Overview"
+    args={{
+      title: "Expand collapse",
+      children: [
+        <Text maxLines={2}>Insert here any component that you want, here is a robot for you</Text>,
+        <Icon iconType={Icon.type.SVG} icon={Robot} iconSize={40} clickable={false} />
+      ],
+      className: "monday-storybook-expand-collapse"
+    }}
+  >
     {expandCollapseTemplate.bind({})}
   </Story>
 </Canvas>
@@ -56,35 +74,63 @@ ExpandCollapse is a component that allows you to hide and show content.
 ### Open by default
 
 <Canvas>
-  <Story name="Open by default" args={{ defaultOpenState: true, title: "ExpandCollapse title" }}>
-    {expandCollapseTemplate.bind({})}
+  <Story name="Open by default">
+    <ExpandCollapse title="Open by default" defaultOpenState className="monday-storybook-expand-collapse">
+      <Text maxLines={2}>Insert here any component that you want</Text>
+    </ExpandCollapse>
+  </Story>
+</Canvas>
+
+### Controlled open state
+
+<Canvas>
+  <Story name="Controlled open state">
+    {() => {
+      const [open, setOpen] = useState(false);
+      return (
+        <Flex direction={Flex.directions.ROW} gap={Flex.gaps.LARGE} align={Flex.align.START}>
+          <ExpandCollapse
+            title="Controlled open state"
+            open={open}
+            onClick={() => setOpen(prevState => !prevState)}
+            className="monday-storybook-expand-collapse"
+          >
+            <Text maxLines={2}>Insert here any component that you want</Text>
+          </ExpandCollapse>
+          <Button onClick={() => setOpen(prevState => !prevState)}>Toggle open state</Button>
+        </Flex>
+      );
+    }}
   </Story>
 </Canvas>
 
 ### Custom header renderer
 
 <Canvas>
-  <Story
-    name="Custom header renderer"
-    args={{
-      headerComponentRenderer: ExpandCollapseCustomHeadingComponent
+  <Story name="Custom header renderer">
+    {() => {
+      const ExpandCollapseCustomHeadingComponent = () => {
+        return <Heading type={Heading.types.H3}>Any component you want</Heading>;
+      };
+      return (
+        <ExpandCollapse
+          headerComponentRenderer={ExpandCollapseCustomHeadingComponent}
+          className="monday-storybook-expand-collapse"
+        >
+          <Text maxLines={2}>Insert here any component that you want</Text>
+        </ExpandCollapse>
+      );
     }}
-  >
-    {expandCollapseTemplate.bind({})}
   </Story>
 </Canvas>
 
 ### Without borders
 
 <Canvas>
-  <Story
-    name="Without borders"
-    args={{
-      title: "ExpandCollapse title",
-      hideBorder: true
-    }}
-  >
-    {expandCollapseTemplate.bind({})}
+  <Story name="Without borders">
+    <ExpandCollapse hideBorder title="Without borders" className="monday-storybook-expand-collapse">
+      <Text maxLines={2}>Insert here any component that you want</Text>
+    </ExpandCollapse>
   </Story>
 </Canvas>
 
