docs-demo: Accordion overview with content for demonstration

--- a/src/components/Accordion/Accordion/__stories__/accordion.stories.mdx
+++ b/src/components/Accordion/Accordion/__stories__/accordion.stories.mdx
@@ -27,7 +27,9 @@ export const accordionTemplate = args => {
   return (
     <Accordion className="monday-storybook-accordion_small-wrapepr" defaultIndex={[1]} {...args}>
       <AccordionItem title="Notifications">
-        <div className="monday-storybook-accordion_small-box" />
+        <div className="monday-storybook-accordion_small-box">
+          Content
+        </div>
       </AccordionItem>
       <AccordionItem title="Setting">
         <div className="monday-storybook-accordion_small-box" />
