code review and design review changes

--- a/src/components/Heading/__stories__/Heading.stories.mdx
+++ b/src/components/Heading/__stories__/Heading.stories.mdx
@@ -76,18 +76,13 @@ just like any other component.
 
 ## Usage
 
-<UsageGuidelines
-  guidelines={[
-    "Never include more than one H1 title per web page.",
-    "Heading always should be linked to content (by design and by implementation by passing the heading id to the content's aria-labelledBy attribute)."
-  ]}
-/>
+<UsageGuidelines guidelines={["Don't include more than one H1 title per web page."]} />
 
-<Tip title="Not what you were looking for?">
-  Please check out our{" "}
-  <Link href="/?path=/docs/inputs-editableheading--overview" withoutSpacing size={Link.sizes.SMALL}>
+<Tip title="Heading components are not editable">
+  Check out our
+  <Link href="/?path=/docs/inputs-editableheading--overview" size={Link.sizes.SMALL}>
     EditableHeading
-  </Link>{" "}
+  </Link>
   component if you would like to allow users to edit the title text.
 </Tip>
 
