--- a/src/components/LegacyHeading/__stories__/LegacyHeading.stories.mdx
+++ b/src/components/LegacyHeading/__stories__/LegacyHeading.stories.mdx
@@ -34,7 +34,7 @@ export const headingTemplate = createComponentTemplate(Heading);
 
 <!--- Component documentation -->
 
-# Heading
+# Legacy heading
 
 <DeprecatedWarning alternativeName="Heading" alternativeLink="/?path=/docs/text-heading--overview" />
 
