--- a/src/components/Text/__stories__/Text.stories.mdx
+++ b/src/components/Text/__stories__/Text.stories.mdx
@@ -277,7 +277,7 @@ A Text component with a link skin can be used to create a link within running te
               monday CRM lets you control your entire sales funnel and close more deals, faster. Automate manual work
               and streamline sales activities from start to finish. Explore monday sales CRM templates
             </Text>
-            <Button kind={Button.kinds.SECONDARY}>Read more</Button>
+            <Button kind={Button.kinds.TERTIARY}>Read more</Button>
           </Flex>
         ),
         description: "If ellipses are used in a paragraph, always use a CTA to reveal more information."
