--- a/src/components/Heading/__stories__/Heading.stories.mdx
+++ b/src/components/Heading/__stories__/Heading.stories.mdx
@@ -171,6 +171,8 @@ Heading component comes in four colors: primary, secondary, on primary, on inver
 Our Heading component supports overflow state.
 When the text is longer than its container and the ellipsis flag is on, the end of the text will be truncated and will display "..."
 
+We support two kinds of ellipsis: single-line ellipsis with a tooltip displayed in hover or ellipsis after multiple lines. You can see examples for both use cases below.
+
 <Canvas>
   <Story name="Overflow" play={headingOverflowSuite}>
     <Flex
