--- a/src/components/Text/__stories__/Text.stories.mdx
+++ b/src/components/Text/__stories__/Text.stories.mdx
@@ -141,6 +141,7 @@ We support two kinds of ellipsis: single-line ellipsis with a tooltip displayed 
   <Story name="Overflow" play={textOverflowSuite}>
     <Flex
       direction={Flex.directions.COLUMN}
+      id={OVERFLOW_TEXT_CONTAINER_ID}
       justify={Flex.justify.START}
       align={Flex.align.INITIAL}
       gap={Flex.gaps.SMALL}
