--- a/src/storybook/patterns/dropdown-in-modals/dropdown-in-modals.stories.mdx
+++ b/src/storybook/patterns/dropdown-in-modals/dropdown-in-modals.stories.mdx
@@ -110,7 +110,7 @@ overflow container has one parent or more with conflicting overflow definitions.
 
 The <code>insideOverflowContainer</code> prop will not function as expected for dropdowns displayed inside Vibe's dialog components.
 The reason is that Vibe dialogs use CSS transform to position the dialog next to the attached element.
-For this specific case, use the 'insideOverflowWithTransformContainer' prop to ensure proper display and functionality.
+For this specific case, use the `insideOverflowWithTransformContainer` prop, and pass the ref of the container dialog as `containerRef` to ensure proper display and functionality.
 
 <Canvas>
   <Story name="insideOverflowWithTransformContainer">
@@ -133,7 +133,9 @@ For this specific case, use the 'insideOverflowWithTransformContainer' prop to e
             placeholder="Dropdown inside a scrollable dialog"
             options={options}
             insideOverflowWithTransformContainer
+            containerRef={dialogRef}
           />
+          <div style={{ height: "50vh" }}>I'm scrollable</div>
         </DialogContentContainer>
       );
       return (
