--- a/src/components/ExpandCollapse/__stories__/ExpandCollapse.stories.mdx
+++ b/src/components/ExpandCollapse/__stories__/ExpandCollapse.stories.mdx
@@ -1,3 +1,4 @@
+import { useState } from "react";
 import ExpandCollapse from "../ExpandCollapse";
 import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
 import { createComponentTemplate, Link } from "vibe-storybook-components";
@@ -10,8 +11,7 @@ import {
 import { Button, Icon, Text, Flex } from "../../index";
 import { Heading } from "../../../next/next";
 import { Robot } from "../../Icon/Icons";
-import { useState } from "react";
-import "./ExpandCollapse.stories.scss";
+import styles from "./ExpandCollapse.stories.module.scss";
 
 export const metaSettings = createStoryMetaSettingsDecorator({
   component: ExpandCollapse,
@@ -50,7 +50,7 @@ ExpandCollapse is a component that allows you to hide and show content.
         <Text maxLines={2}>Insert here any component that you want, here is a robot for you</Text>,
         <Icon iconType={Icon.type.SVG} icon={Robot} iconSize={40} clickable={false} />
       ],
-      className: "monday-storybook-expand-collapse"
+      className: styles.storybookExpandCollapse
     }}
   >
     {expandCollapseTemplate.bind({})}
@@ -75,7 +75,7 @@ ExpandCollapse is a component that allows you to hide and show content.
 
 <Canvas>
   <Story name="Open by default">
-    <ExpandCollapse title="Open by default" defaultOpenState className="monday-storybook-expand-collapse">
+    <ExpandCollapse title="Open by default" defaultOpenState className={styles.storybookExpandCollapse}>
       <Text maxLines={2}>Insert here any component that you want</Text>
     </ExpandCollapse>
   </Story>
@@ -93,7 +93,7 @@ ExpandCollapse is a component that allows you to hide and show content.
             title="Controlled open state"
             open={open}
             onClick={() => setOpen(prevState => !prevState)}
-            className="monday-storybook-expand-collapse"
+            className={styles.storybookExpandCollapse}
           >
             <Text maxLines={2}>Insert here any component that you want</Text>
           </ExpandCollapse>
@@ -115,7 +115,7 @@ ExpandCollapse is a component that allows you to hide and show content.
       return (
         <ExpandCollapse
           headerComponentRenderer={ExpandCollapseCustomHeadingComponent}
-          className="monday-storybook-expand-collapse"
+          className={styles.storybookExpandCollapse}
         >
           <Text maxLines={2}>Insert here any component that you want</Text>
         </ExpandCollapse>
@@ -128,7 +128,7 @@ ExpandCollapse is a component that allows you to hide and show content.
 
 <Canvas>
   <Story name="Without borders">
-    <ExpandCollapse hideBorder title="Without borders" className="monday-storybook-expand-collapse">
+    <ExpandCollapse hideBorder title="Without borders" className={styles.storybookExpandCollapse}>
       <Text maxLines={2}>Insert here any component that you want</Text>
     </ExpandCollapse>
   </Story>
