--- a/src/storybook/patterns/dropdown-in-modals/dropdown-in-modals.stories.mdx
+++ b/src/storybook/patterns/dropdown-in-modals/dropdown-in-modals.stories.mdx
@@ -14,6 +14,8 @@ import {
   DIALOG_CONTENT_CONTAINER,
   DIALOG
 } from "../../components/related-components/component-description-map";
+import ModalExampleContent from "./ModalExampleContent";
+import Box from "../../../components/Box/Box";
 
 <Meta title="Technical Patterns/Dropdowns inside pop-overs" />
 
@@ -90,9 +92,10 @@ overflow container has one parent or more with conflicting overflow definitions.
       return (
         <Flex gap={Flex.gaps.LARGE}>
           <DialogContentContainer style={dialogStyle}>
-            <div style={{ height: "100px" }} />
-            <Dropdown placeholder="Dropdown inside a scrollable dialog" options={options} insideOverflowContainer />
-            <div style={{ height: "100px" }} />
+            <ModalExampleContent />
+            <Box marginTop={Box.marginTops.MEDIUM} marginBottom={Box.marginBottoms.XXL}>
+              <Dropdown placeholder="Dropdown inside a scrollable dialog" options={options} insideOverflowContainer />
+            </Box>
           </DialogContentContainer>
           <div>
             <Button onClick={() => setShow(true)}>Open modal</Button>
@@ -130,16 +133,15 @@ For this specific case, use the 'insideOverflowWithTransformContainer' prop to e
       const dialogRef = useRef();
       const dialogStyle = { width: "300px", height: "200px", overflow: "auto" };
       const secondDialogContent = (
-        <DialogContentContainer style={dialogStyle} ref={dialogRef}>
-          <div style={{ height: "100px" }} />
-          <div style={{ height: "100px" }}>
+        <DialogContentContainer style={dialogStyle}>
+          <ModalExampleContent />
+          <Box marginTop={Box.marginTops.MEDIUM} marginBottom={Box.marginBottoms.XXL}>
             <Dropdown
               placeholder="Dropdown inside a scrollable dialog"
               options={options}
               insideOverflowWithTransformContainer
             />
-          </div>
-          <div style={{ height: "100px" }} />
+          </Box>
         </DialogContentContainer>
       );
       return (
