--- a/src/components/Table/Table/__stories__/table.stories.mdx
+++ b/src/components/Table/Table/__stories__/table.stories.mdx
@@ -8,23 +8,36 @@ import TableRow from "../../TableRow/TableRow";
 import TableCell from "../../TableCell/TableCell";
 import Label from "../../../Label/Label";
 import Skeleton from "../../../Skeleton/Skeleton";
-import Flex from "../../../Flex/Flex";
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
 import { createStoryMetaSettingsDecorator } from "../../../../storybook";
-import { Link, MultipleStoryElementsWrapper, createComponentTemplate } from "vibe-storybook-components";
-import { emailTableData, emailColumns, TableAvatar, TableErrorState, TableEmptyState, sort, scrollTableColumns, scrollTableData } from './helpers';
-import { LABEL, ICON_BUTTON, SKELETON } from "../../../../storybook/components/related-components/component-description-map";
-import './table.stories.scss';
+import { createComponentTemplate } from "vibe-storybook-components";
+import {
+  emailTableData,
+  emailColumns,
+  TableAvatar,
+  TableErrorState,
+  TableEmptyState,
+  sort,
+  scrollTableColumns,
+  scrollTableData
+} from "./helpers";
+import {
+  LABEL,
+  ICON_BUTTON,
+  SKELETON
+} from "../../../../storybook/components/related-components/component-description-map";
+import "./table.stories.scss";
 
 export const metaSettings = createStoryMetaSettingsDecorator({
-  component: Table,
-})
+  component: Table
+});
 
 <Meta
   title="Data display/Table"
-  component={ Table }
-  argTypes={ metaSettings.argTypes }
-  decorators={ metaSettings.decorators }
+  component={metaSettings.component}
+  subcomponents={{ TableHeader, TableHeaderCell, TableRow, TableCell, TableBody, TableVirtualizedBody }}
+  argTypes={metaSettings.argTypes}
+  decorators={metaSettings.decorators}
 />
 
 <!--- Component template -->
@@ -34,6 +47,7 @@ export const tableTemplate = createComponentTemplate(Table);
 <!--- Component documentation -->
 
 # Table
+
 - [Overview](#overview)
 - [Props](#props)
 - [Table header functionality](#table-header-functionality)
@@ -42,20 +56,15 @@ export const tableTemplate = createComponentTemplate(Table);
 - [Related components](#related-components)
 
 ## Overview
+
 Table
+
 <Canvas>
   <Story name="Overview">
-    <Table
-      errorState={<TableErrorState />}
-      emptyState={<TableEmptyState />}
-      columns={emailColumns}
-    >
+    <Table errorState={<TableErrorState />} emptyState={<TableEmptyState />} columns={emailColumns}>
       <TableHeader>
         {emailColumns.map((headerCell, index) => (
-          <TableHeaderCell
-            key={index}
-            title={headerCell.title}
-          ></TableHeaderCell>
+          <TableHeaderCell key={index} title={headerCell.title} />
         ))}
       </TableHeader>
       <TableBody>
@@ -78,10 +87,13 @@ Table
 </Canvas>
 
 ## Props
-<ArgsTable of={ Table } />
+
+<ArgsTable of={Table} />
 
 ## Table header functionality
+
 Sorting, Icons and Information added to selected columns
+
 <Canvas>
   <Story name="Table Header Functionality">
     {() => {
@@ -92,11 +104,7 @@ Sorting, Icons and Information added to selected columns
         setTableData(sort(columnId, sortState, tableData));
       };
       return (
-        <Table
-          errorState={<TableErrorState />}
-          emptyState={<TableEmptyState />}
-          columns={emailColumns}
-        >
+        <Table errorState={<TableErrorState />} emptyState={<TableEmptyState />} columns={emailColumns}>
           <TableHeader>
             {emailColumns.map((headerCell, index) => (
               <TableHeaderCell
@@ -106,7 +114,7 @@ Sorting, Icons and Information added to selected columns
                 infoContent={headerCell.infoContent}
                 onSortClicked={sortState => onSort(headerCell.id, sortState)}
                 sortState={sorting[headerCell.id]}
-              ></TableHeaderCell>
+              />
             ))}
           </TableHeader>
           <TableBody>
@@ -126,62 +134,56 @@ Sorting, Icons and Information added to selected columns
           </TableBody>
         </Table>
       );
-    }};
+    }}
+    ;
   </Story>
 </Canvas>
 
 ## Loading
+
 Using skeleton
+
 <Canvas>
   <Story name="Loading">
-    {() => {
-      return (
-        <Table
-          errorState={<TableErrorState />}
-          emptyState={<TableEmptyState />}
-          columns={emailColumns}
-        >
-          <TableHeader>
-            {emailColumns.map((headerCell, index) => (
-              <TableHeaderCell
-                key={index}
-                title={headerCell.title}
-              ></TableHeaderCell>
-            ))}
-          </TableHeader>
-          <TableBody>
-            {[...new Array(5)].map((key, index) => (
-              <TableRow key={index}>
-                <TableCell>
-                  <Skeleton type={Skeleton.types.TEXT} height={20} width={index % 2 === 0 ? 140 : 70} />
-                </TableCell>
-                <TableCell>
-                  <Skeleton type={Skeleton.types.TEXT} height={20} width={index % 2 === 0 ? 200 : 120} />
-                </TableCell>
-                <TableCell>
-                  <Skeleton type={Skeleton.types.CIRCLE} height={24} width={24} />
-                </TableCell>
-                <TableCell>
-                  <Skeleton type={Skeleton.types.TEXT} height={20} />
-                </TableCell>
-                <TableCell>
-                  <Skeleton type={Skeleton.types.TEXT} height={20} />
-                </TableCell>
-              </TableRow>
-            ))}
-          </TableBody>
-        </Table>
-      );
-    }};
+    <Table errorState={<TableErrorState />} emptyState={<TableEmptyState />} columns={emailColumns}>
+      <TableHeader>
+        {emailColumns.map((headerCell, index) => (
+          <TableHeaderCell key={index} title={headerCell.title} />
+        ))}
+      </TableHeader>
+      <TableBody>
+        {[...new Array(5)].map((key, index) => (
+          <TableRow key={index}>
+            <TableCell>
+              <Skeleton type={Skeleton.types.TEXT} height={20} width={index % 2 === 0 ? 140 : 70} />
+            </TableCell>
+            <TableCell>
+              <Skeleton type={Skeleton.types.TEXT} height={20} width={index % 2 === 0 ? 200 : 120} />
+            </TableCell>
+            <TableCell>
+              <Skeleton type={Skeleton.types.CIRCLE} height={24} width={24} />
+            </TableCell>
+            <TableCell>
+              <Skeleton type={Skeleton.types.TEXT} height={20} />
+            </TableCell>
+            <TableCell>
+              <Skeleton type={Skeleton.types.TEXT} height={20} />
+            </TableCell>
+          </TableRow>
+        ))}
+      </TableBody>
+    </Table>
   </Story>
 </Canvas>
 
 ## Scroll
+
 This is an example of a table with 5000 rows
+
 <Canvas>
   <Story name="Scroll">
     {() => {
-      const Row = ({ id, num, text }) => {
+      const Row = ({ _id, num, text }) => {
         return (
           <TableRow>
             <TableCell>{num}</TableCell>
@@ -189,21 +191,23 @@ This is an example of a table with 5000 rows
           </TableRow>
         );
       };
-      return (<div style={{ display: "flex", overflowX: "scroll", height: 250, flex: 1 }}>
-        <Table
-          errorState={<TableErrorState />}
-          emptyState={<TableEmptyState />}
-          columns={scrollTableColumns}
-          className="monday-storybook-table_full-width"
-        >
-          <TableHeader>
-            {scrollTableColumns.map((cell, index) => (
-              <TableHeaderCell key={index} {...cell} />
-            ))}
-          </TableHeader>
-          <TableVirtualizedBody rowRenderer={Row} items={scrollTableData} />
-        </Table>
-      </div>);
+      return (
+        <div style={{ display: "flex", overflowX: "scroll", height: 250, flex: 1 }}>
+          <Table
+            errorState={<TableErrorState />}
+            emptyState={<TableEmptyState />}
+            columns={scrollTableColumns}
+            className="monday-storybook-table_full-width"
+          >
+            <TableHeader>
+              {scrollTableColumns.map((cell, index) => (
+                <TableHeaderCell key={index} {...cell} />
+              ))}
+            </TableHeader>
+            <TableVirtualizedBody rowRenderer={Row} items={scrollTableData} />
+          </Table>
+        </div>
+      );
     }}
   </Story>
 </Canvas>
