--- a/src/components/ThemeProvider/__stories__/ThemeProvider.stories.mdx
+++ b/src/components/ThemeProvider/__stories__/ThemeProvider.stories.mdx
@@ -1,7 +1,7 @@
 import ThemeProvider from "../ThemeProvider";
 import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
 import { createStoryMetaSettingsDecorator } from "../../../storybook";
-import { ThemeProviderTemplateOverview, ThemeProviderTemplateTwoButtons } from "./ThemeProviderTemplateTwoButtons";
+import { ThemeProviderTemplateOverview, ThemeProviderStories } from "./ThemeProvider.stories";
 import { SystemTheme, Color } from "../ThemeProviderConstants";
 
 export const metaSettings = createStoryMetaSettingsDecorator({
@@ -75,5 +75,5 @@ Please write here the component description
 ### Theming scope
 
 <Canvas>
-  <Story name="Theming scope">{ThemeProviderTemplateTwoButtons.bind({})}</Story>
+  <Story name="Theming scope">{ThemeProviderStories.bind({})}</Story>
 </Canvas>
