--- a/src/components/ThemeProvider/__stories__/ThemeProvider.stories.mdx
+++ b/src/components/ThemeProvider/__stories__/ThemeProvider.stories.mdx
@@ -1,7 +1,11 @@
 import ThemeProvider from "../ThemeProvider";
 import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
 import { createStoryMetaSettingsDecorator } from "../../../storybook";
-import { ThemeProviderTemplateOverview, ThemeProviderThemingScopeTemplate } from "./ThemeProvider.stories";
+import {
+  ThemeProviderFoldedThemingTemplate,
+  ThemeProviderTemplateOverview,
+  ThemeProviderThemingScopeTemplate
+} from "./ThemeProvider.stories";
 import { SystemTheme, Color } from "../ThemeProviderConstants";
 
 export const metaSettings = createStoryMetaSettingsDecorator({
@@ -76,4 +80,10 @@ Please write here the component description
 
 <Canvas>
   <Story name="Theming scope">{ThemeProviderThemingScopeTemplate.bind({})}</Story>
+</Canvas>
+
+### Folded theming
+
+<Canvas>
+  <Story name="Folded theming">{ThemeProviderFoldedThemingTemplate.bind({})}</Story>
 </Canvas>
